# libXext

./: .gitignore  ChangeLog  Makefile.am  configure.ac  xext.pc.in
include/X11/extensions/: MITMisc.h  XTest.h  shape.h  sync.h
man/: .gitignore  DBE.man  DPMSGetVersion.man  DPMSQueryExtension.man  Makefile.am  XShape.man  XShm.man  XdbeAllocateBackBufferName.man  XdbeBeginIdiom.man  XdbeDeallocateBackBufferName.man  XdbeEndIdiom.man  XdbeFreeVisualInfo.man  XdbeGetBackBufferAttributes.man  XdbeGetVisualInfo.man  XdbeQueryExtension.man  XdbeSwapBuffers.man  Xevi.man  Xmbuf.man
specs/: .gitignore  Makefile.am  dbelib.tex  dbelib.xml  dpmslib.xml  shapelib.xml  synclib.tex  synclib.xml  xtest1.xml
src/: .gitignore  DPMS.c  MITMisc.c  Makefile.am  XAppgroup.c  XEVI.c  XLbx.c  XMultibuf.c  XSecurity.c  XShape.c  XShm.c  XSync.c  XTestExt1.c  Xcup.c  Xdbe.c  Xge.c  extutil.c  globals.c  region.h
